RESOLVED FIXED 29132
Symbian winscw compiler fails compiling WebCore/text/RegularExpression.cpp.
https://bugs.webkit.org/show_bug.cgi?id=29132
Summary Symbian winscw compiler fails compiling WebCore/text/RegularExpression.cpp.
Yongjun Zhang
Reported 2009-09-10 10:58:39 PDT
The compiler is not able to resolve class Private in class declaration: class RegularExpression::Private : public RefCounted<Private> {...} Add RegularExpression class qualifier before Private should fix this.
Attachments
add RegularExpression class qualifier before Private to make it compile in winscw compiler. (1.18 KB, patch)
2009-09-10 11:12 PDT, Yongjun Zhang
no flags
Yongjun Zhang
Comment 1 2009-09-10 11:12:48 PDT
Created attachment 39357 [details] add RegularExpression class qualifier before Private to make it compile in winscw compiler.
WebKit Commit Bot
Comment 2 2009-09-11 01:43:39 PDT
Comment on attachment 39357 [details] add RegularExpression class qualifier before Private to make it compile in winscw compiler. Clearing flags on attachment: 39357 Committed r48290: <http://trac.webkit.org/changeset/48290>
WebKit Commit Bot
Comment 3 2009-09-11 01:43:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.