2009-09-11  Yongjun Zhang  <yongjun.zhang@nokia.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=29132
        Symbian winscw compiler fails compiling WebCore/text/RegularExpression.cpp.

        Add RegularExpression class qualifier before Private.

        * platform/text/RegularExpression.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@48290 bbb929c8-8fbe-4397-9dbb-9b2b20218538