third_party/WebKit/WebCore/platform/text/RegularExpression.cpp
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-class RegularExpression::Private : public RefCounted<Private> {
+class RegularExpression::Private : public RefCounted<RegularExpression::Private> {
 public:
     static PassRefPtr<Private> create(const String& pattern, TextCaseSensitivity);
     ~Private();
